# ChangeLog for media-gfx/splashutils
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-gfx/splashutils/ChangeLog,v 1.123 2007/12/23 12:24:56 spock Exp $

  23 Dec 2007; Michał Januszewski <spock@gentoo.org>
  -splashutils-1.5.2.ebuild, -splashutils-1.5.3.ebuild,
  -splashutils-1.5.3.1.ebuild:
  Remove old ebuilds.

  23 Dec 2007; Michał Januszewski <spock@gentoo.org>
  splashutils-1.5.3.2.ebuild:
  Add info about the fbcondecor USE flag for users upgrading from pre-1.5.3
  versions (bug #202686).

  21 Dec 2007; nixnut <nixnut@gentoo.org> splashutils-1.5.2.1.ebuild:
  Stable on ppc wrt bug 195443

*splashutils-1.5.3.2 (16 Dec 2007)

  16 Dec 2007; Michał Januszewski <spock@gentoo.org>
  +splashutils-1.5.3.2.ebuild:
  Version bump.

*splashutils-1.5.3.1 (05 Dec 2007)

  05 Dec 2007; Michał Januszewski <spock@gentoo.org>
  +splashutils-1.5.3.1.ebuild:
  Version bump: minor bugfixes.

  01 Dec 2007; Michał Januszewski <spock@gentoo.org>
  splashutils-1.5.3.ebuild:
  Fix bug #200911: don't install documentation both to
  /usr/share/doc/splashutils and /usr/share/doc/splashutils-<ver>.

*splashutils-1.5.3 (25 Nov 2007)

  25 Nov 2007; Michał Januszewski <spock@gentoo.org>
  +splashutils-1.5.3.ebuild:
  Version bump.

  21 Oct 2007; Steve Dibb <beandog@gentoo.org> splashutils-1.5.2.ebuild,
  splashutils-1.5.2.1.ebuild:
  amd64 stable, bug 195443

  11 Oct 2007; Roy Marples <uberlord@gentoo.org>
  +files/splashutils-1.5.2.1-baselayout-rc5.patch,
  splashutils-1.5.2.1.ebuild:
  Patch splashtutils to work on baselayout-2.0.0_rc5

  11 Oct 2007; Christian Faulhammer <opfer@gentoo.org>
  splashutils-1.5.2.1.ebuild:
  stable x86, bug 195443

  24 Sep 2007; Michał Januszewski <spock@gentoo.org>
  splashutils-1.5.2.1.ebuild:
  Add missing quotes around variables that can contain spaces.

  23 Sep 2007; Michał Januszewski <spock@gentoo.org>
  -splashutils-1.4.3.ebuild, -splashutils-1.5.1.ebuild,