@@ -1,0 +1,21 @@
+MD5 65234327c5ac46ee00ebda15995d4c1c freetype-2.3.5.tar.bz2 1279861
+RMD160 2a97cb1c3d93572c094d5d2890d12445ef2786d4 freetype-2.3.5.tar.bz2 1279861
+SHA256 1b357a3a1106c78c80dfd25e3854c3faa9a3dfc7063a4a1e5404e70c241d677e freetype-2.3.5.tar.bz2 1279861
+MD5 dbd5f3b47ed13132f04c685d608a7547 jpegsrc.v6b.tar.gz 613261
+RMD160 18892206014fbb8cae2a44e281f4ed53feaf7882 jpegsrc.v6b.tar.gz 613261
+SHA256 75c3ec241e9996504fe02a9ed4d12f16b74ade713972f3db9e65ce95cd27e35d jpegsrc.v6b.tar.gz 613261
+MD5 25a7f2f101eaaf2eb18c4987e0fbe39d libpng-1.2.18.tar.bz2 623690
+RMD160 ea81056a896eb038fa5d7fde2b7fa626c1a2e31e libpng-1.2.18.tar.bz2 623690
+SHA256 6fce62f9e67e951c38672bf520c062a2be742e893d240d150748a00c32f20c62 libpng-1.2.18.tar.bz2 623690
+MD5 0a9505c5c5ed169e6158d2c1b06ff40b miscsplashutils-0.1.8.tar.bz2 91997
+RMD160 5efe2bfb8ae409d3e59e82b473454d94e44149ab miscsplashutils-0.1.8.tar.bz2 91997
+SHA256 38e8434c7266126477237c4d9e6cbeca152089ab33c14a7761089b7970f8d336 miscsplashutils-0.1.8.tar.bz2 91997
+MD5 34b607da44b350bc16085261041ca080 splashutils-gentoo-1.0.11.tar.bz2 14879
+RMD160 3a067329a72e334c68913906b720e80022b025ea splashutils-gentoo-1.0.11.tar.bz2 14879
+SHA256 f2f6a82d34f5438a0bcbf2d79181c15c92ab2ed12881d88db6b271067b616613 splashutils-gentoo-1.0.11.tar.bz2 14879
+MD5 e7d023f964677bcbfb71dfecd3c3e9c4 splashutils-lite-1.5.3.3.tar.bz2 413745
+RMD160 a5bcaf0e08b88b408c32a6f2a872039b1fe10b8e splashutils-lite-1.5.3.3.tar.bz2 413745
+SHA256 007ee847f5096a625de37b0d2256f6c899602241560b0b86abab53944365ed80 splashutils-lite-1.5.3.3.tar.bz2 413745
+MD5 dee233bf288ee795ac96a98cc2e369b6 zlib-1.2.3.tar.bz2 425209
+RMD160 cfba9984b354dcc38da49331457e6bfc861c6f51 zlib-1.2.3.tar.bz2 425209
+SHA256 e3b9950851a19904d642c4dec518623382cf4d2ac24f70a76510c944330d28ca zlib-1.2.3.tar.bz2 425209
