@@ -1,6 +1,12 @@
 # ChangeLog for media-gfx/splashutils
-# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-gfx/splashutils/ChangeLog,v 1.123 2007/12/23 12:24:56 spock Exp $
+# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/media-gfx/splashutils/ChangeLog,v 1.124 2008/01/06 15:13:11 spock Exp $
+
+*splashutils-1.5.3.3 (06 Jan 2008)
+
+  06 Jan 2008; Michał Januszewski <spock@gentoo.org>
+  +splashutils-1.5.3.3.ebuild:
+  Version bump (fixes bugs #200217, #200668).
 
   23 Dec 2007; Michał Januszewski <spock@gentoo.org>
   -splashutils-1.5.2.ebuild, -splashutils-1.5.3.ebuild,
